<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">Serenine</string>
    <string name="main_menu">Adventure</string>

    <string name="new_world">New World</string>
    <string name="new_world_option1">Option 1</string>
    <string name="new_world_option2">Option 2</string>
    <string name="new_world_option3">Option 3</string>
    <string name="create_new_world">Travel the Stars</string>

    <string name="turn_menu">End Turn</string>
    <string name="next_turn_confirmation">Confirm Next Turn</string>
    <string name="city_citizen_auto_menu">Citizen Work</string>

    <string name="build_menu">Build</string>
    <string name="unit_menu">Units</string>
    <string name="selected_unit_menu">Unit</string>
    <string name="action_select_move_unit">Move</string>
    <string name="info_menu">Info</string>
    <string name="queue_menu">Queue</string>
    <string name="tech_menu">Technology</string>
    <string name="diplomacy_menu">Diplomacy</string>

    <string name="end_comm">End Communication</string>

    <string name="combat_exit_menu">Exit Combat</string>
    <string name="combat_next_turn">Next Turn</string>

    <string name="resources_tooltip">Resources are used to build buildings, and items to equip units.</string>
</resources>