<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"	
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<io.github.dantetam.opstrykontest.LessonSevenGLSurfaceView
		android:id="@+id/gl_surface_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />
    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/main_menu"
            android:text="@string/main_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="20%"
            app:layout_heightPercent="15%"
            app:layout_marginTopPercent="0%"
            app:layout_marginLeftPercent="0%"
            android:contentDescription="@string/new_world"
            android:onClick="onClickNewWorld" />
        <Button
            android:id="@+id/build_menu"
            android:text="@string/build_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="20%"
            app:layout_heightPercent="15%"
            app:layout_marginTopPercent="85%"
            app:layout_marginLeftPercent="60%"
            android:visibility="invisible"
            android:contentDescription="@string/build_menu"
            android:onClick="onClickBuildMenu" />
        <Button
            android:id="@+id/selected_unit_menu"
            android:text="@string/selected_unit_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="20%"
            app:layout_heightPercent="15%"
            app:layout_marginTopPercent="85%"
            app:layout_marginLeftPercent="60%"
            android:visibility="invisible"
            android:contentDescription="@string/selected_unit_menu"
            android:onClick="onClickUnitSelectedButton" />
        <Button
            android:id="@+id/unit_menu"
            android:text="@string/unit_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="20%"
            app:layout_heightPercent="15%"
            app:layout_marginTopPercent="85%"
            app:layout_marginLeftPercent="80%"
            android:visibility="invisible"
            android:contentDescription="@string/unit_menu"
            android:onClick="onClickUnitMenu" />
    </android.support.percent.PercentRelativeLayout>
        <!--
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/usb_android"
            android:contentDescription="@string/new_world"
            android:onClick="onClickNewWorld" />
		<Button
			android:id="@+id/button_decrease_num_cubes"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/lesson_seven_decrease_cube_count" />	
		<Button
			android:id="@+id/button_increase_num_cubes"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/lesson_seven_increase_cube_count" />
		<Button
			android:id="@+id/button_switch_VBOs"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/lesson_seven_using_VBOs" />
		<Button
			android:id="@+id/button_switch_stride"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/lesson_seven_using_stride" />
		-->

</FrameLayout>
